--- a/report/classicthesis-config.tex
+++ b/report/classicthesis-config.tex
@@ -39,8 +39,8 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{My Title\xspace}
-\newcommand{\mySubtitle}{My Subtitle\xspace}
+\newcommand{\myTitle}{Train a Smartcab to Drive\xspace}
+\newcommand{\mySubtitle}{Implement a basic driving agent\xspace}
 %\newcommand{\myDegree}{Doktor-Ingenieur (Dr.-Ing.)\xspace}
 \newcommand{\myName}{Omoju Miller\xspace}
 %\newcommand{\myProf}{Put name here\xspace}
