--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -4,13 +4,11 @@
     \begin{addmargin}[-1cm]{-3cm}
     \begin{center}
         \large
-        {\Large \textsc{Organization}}\\[1ex]
-        Title\\
        
 
         \vfill
 
-        Name of Project\\ \vskip1cm
+        Machine Learning NanoDegree\\ \vskip1cm
         \rule{14cm}{0.4pt}\\ \bigskip
         \begingroup
             \Large
@@ -25,7 +23,7 @@
         \vfill
 
        
-        \hfill The date
+        \hfill \today
     \end{center}
     \vspace{-3.5cm}
     \includegraphics[width=0.50\textwidth]{figures/udacity_logo}
