feat: Update 'State'

--- a/report/report.tex
+++ b/report/report.tex
@@ -158,8 +158,6 @@ It was frustrating to watch. Most of the time, the agent never made it to the de
 
 
 
-
-
 %--------------------------------------------------------------------------------
 %
 %  CHAPTER 
@@ -175,6 +173,16 @@ It was frustrating to watch. Most of the time, the agent never made it to the de
 
 \item [Optional] How many states in total exist for the smartcab in this environment? Does this number seem reasonable given that the goal of Q-Learning is to learn and make informed decisions about each state? Why or why not?
 \end{itemize}
+
+
+
+
+Things we have to keep track off:
+\begin{itemize}
+\item $T$, the time we have left
+\item
+\end{itemize}
+
 
 %--------------------------------------------------------------------------------
 %
