feat: Update State buggy

--- a/report/report.tex
+++ b/report/report.tex
@@ -190,6 +190,13 @@ Things we have to keep track off:
 \end{itemize}
 
 
+\begin{figure}[!hbtp]
+\centering
+    \includegraphics[width=0.9\textwidth]{figures/state1}
+  
+    \caption{\textbf{Agent State}}\label{fig:state1}
+\end{figure}
+
 %--------------------------------------------------------------------------------
 %
 %  CHAPTER 
