--- a/report/report.tex
+++ b/report/report.tex
@@ -194,7 +194,7 @@ Things we have to keep track off:
 \centering
     \includegraphics[width=0.9\textwidth]{figures/state1}
   
-    \caption{\textbf{Agent State}}\label{fig:state1}
+    \caption{\textbf{Agent State: Unobstructed}}\label{fig:state1}
 \end{figure}
 
 %--------------------------------------------------------------------------------
