docs: update report

--- a/report/report.tex
+++ b/report/report.tex
@@ -131,12 +131,6 @@ In the not-so-distant future, taxicab companies across the United States no long
 \item Observe what you see with the agent's behavior as it takes random actions. Does the \textbf{smartcab} eventually make it to the destination? Are there any other interesting observations to note?
 \end{itemize}
 
-
-
-
- 
-
-
 At first, I set the action of the self-driving agent as forward so I could understand how the grid world worked. 
 \begin{minted}{python}
 
@@ -173,9 +167,11 @@ I ran a 100 simulation trials four times and got an average success rate of 19.3
 \section*{Question}
 
 \begin{itemize}
-\item What states have you identified that are appropriate for modeling the smartcab and environment? Why do you believe each of these states to be appropriate for this problem?
+\item What states have you identified that are appropriate for modeling the smartcab and environment?
+\item Why do you believe each of these states to be appropriate for this problem?
 
-\item [Optional] How many states in total exist for the smartcab in this environment? Does this number seem reasonable given that the goal of Q-Learning is to learn and make informed decisions about each state? Why or why not?
+\item Optional: How many states in total exist for the smartcab in this environment?
+\item Optional: Does this number seem reasonable given that the goal of Q-Learning is to learn and make informed decisions about each state? Why or why not?
 \end{itemize}
 
 
