--- a/report/report.tex
+++ b/report/report.tex
@@ -171,7 +171,7 @@ I ran a 100 simulation trials four times and got an average success rate of 19.3
 
 \begin{figure}[!hbtp]
 \centering
-    \includegraphics[width=0.5\textwidth]{figures/oktoRIGHTonRED}
+    \includegraphics[width=0.55\textwidth]{figures/oktoRIGHTonRED}
   
     \caption{\textbf{Agent State: ok to RIGHT on RED}}\label{fig:state1}
 \end{figure}
@@ -180,18 +180,18 @@ I ran a 100 simulation trials four times and got an average success rate of 19.3
 \centering
     \includegraphics[width=0.5\textwidth]{figures/oktoPROCEEDorLEFTonGREEN}
   
-    \caption{\textbf{Agent State: ok to PROCEED or LEFT on GREEN}}\label{fig:state2}
+    \caption{\textbf{Agent State: ok to PROCEED or LEFT on GREEN or RIGHT on GREEN}}\label{fig:state2}
 \end{figure}
 
 \begin{itemize}
 \item What states have you identified that are appropriate for modeling the smartcab and environment?\\
 States: 
   \begin{itemize}
-    \item ``ok to RIGHT on RED"\\ At an intersection with a red light
-    \item  ``STOP RED light" \\ At an intersection with a red light and there is traffic from the left
-    \item ``ok to PROCEED or LEFT on GREEN" \\ At an intersection with a green light with no oncoming traffic and no traffic on the left
-    \item ``ok to PROCEED or RIGHT on GREEN" \\At an intersection with a green light with no traffic on the left
-    \item ``ok to PROCEED" \\ At an intersection with a green light
+    \item \texttt{ok to RIGHT on RED}\\ At an intersection with a red light
+    \item \texttt{STOP RED light} \\ At an intersection with a red light and there is traffic from the left
+    \item \texttt{ok to PROCEED or LEFT on GREEN or RIGHT on GREEN} \\ At an intersection with a green light with no oncoming traffic and no traffic on the left
+    \item \texttt{ok to PROCEED or RIGHT on GREEN} \\At an intersection with a green light with no traffic on the left
+    \item \texttt{ok to PROCEED} \\ At an intersection with a green light
    
   \end{itemize}
 
@@ -201,7 +201,14 @@ States:
 
 There are basically two universal states that the smartcab can be in. Either it is in use, or it is not. In the case that it is not in use, it might be recharging, going through maintenance or just parked.
 
-When it is in service, there are only a finite set of things that the smartcab can be doing. These states have to do with either movement or driving safety.
+When it is in service, there are a finite set of things that the smartcab can be doing. These states have to do with either movement or driving safety.
+
+I have idenitified the default state of the smartcab while its being use to be in the state \texttt{``ok to PROCEED''}. 
+
+
+
+
+
 
 \item Optional: How many states in total exist for the smartcab in this environment?
 \item Optional: Does this number seem reasonable given that the goal of Q-Learning is to learn and make informed decisions about each state? Why or why not?
